Scrollbar fix

--- a/web_project_3/blocks/cover/cover.css
+++ b/web_project_3/blocks/cover/cover.css
@@ -27,7 +27,6 @@
         width: 100vw;
         position: relative;
         right: 24px;
-        overflow: visible;
     }
 }
 
@@ -39,6 +38,5 @@
         width: 100vw;
         position: relative;
         right: 16px;
-        overflow: visible;
     }
 }
