--- a/web_project_3/blocks/lead/__image/lead__image.css
+++ b/web_project_3/blocks/lead/__image/lead__image.css
@@ -15,7 +15,6 @@
         max-width: 768px;
         width: 100vw;
         position: relative;
-        overflow: visible;
     }
 }
 
@@ -25,6 +24,5 @@
         max-width: 320px;
         width: 100vw;
         position: relative;
-        overflow: visible;
     }
 }
