--- a/web_project_3/blocks/page/page.css
+++ b/web_project_3/blocks/page/page.css
@@ -2,9 +2,8 @@
 
 .page{
     background-color: #2A2C2F;
-    min-width: 1280px;
-    max-width: 1600px;
     font-family: "Inter", sans-serif;
+    max-width: 1280px;
     margin: 0 auto;
     color: white;
     box-sizing: border-box;
